finish lab 3
