# backend/internal/pkg/auth/delivery/http/auth_handler.go
@@ -18,9 +18,9 @@ func NewAuthHandler(m *mux.Router, userUsecase models.UserUsecaseI) {
 	handler := &authHandler{
 		userUsecase: userUsecase,
 	}
-	m.HandleFunc("/auth/login", handler.LogIn).Methods("POST")
-	m.HandleFunc("/auth/register", handler.Register).Methods("POST")
-	m.HandleFunc("/auth/logout", handler.LogOut).Methods("DELETE")
+	m.HandleFunc("/api/auth/login", handler.LogIn).Methods("POST")
+	m.HandleFunc("/api/auth/register", handler.Register).Methods("POST")
+	m.HandleFunc("/api/auth/logout", handler.LogOut).Methods("DELETE")
 }
 
 // @Summary Log in
